--- a/ss07_website_layout_design/exercise/exe1/create_layout_rwd.css
+++ b/ss07_website_layout_design/exercise/exe1/create_layout_rwd.css
@@ -1,17 +1,15 @@
 body{
     margin: 0;
+    position: relative;
 }
 #header {
-    position: relative;
     background-color:dimgrey;
     width: 100%;
     height: 48px;
-    bottom: 0;
-}
-#nav{
-    padding: 0;
+    position: absolute;
 }
 #nav li{
+    position: relative;
     display: inline-block;
     color: aliceblue;
     font-size: 24px;
@@ -19,6 +17,7 @@ body{
     padding-right: 18px;
     height: 48px;
     line-height: 48px;
+    bottom: 15px;
 }
 #nav li:hover{
     background-color: #ccc;
@@ -31,7 +30,7 @@ body{
     float: left;
 }
 #sidebar1 ul {
-    margin-top: 20px;
+    margin-top: 60px;
 }
 #sidebar1 ul li{
     color: blue;
@@ -39,11 +38,13 @@ body{
     padding: 10px;
 }
 #body{
+    margin-top: 50px;
     width: 70%;
     height: 500px;
     float: left;
 }
 #body h1{
+    margin-top: 20px;
     margin-left: 20px;
     padding-left: 10px;
     padding-right: 10px;
@@ -58,6 +59,7 @@ body{
     width: 15%;
     height: 500px;
     float: left;
+    margin-top: 40px;
 }
 #sidebar2 button{
     width: 150px;
@@ -68,11 +70,11 @@ body{
 #footer{
     background-color: dimgrey;
     width: 100%;
-    height: 60px;
+    height: 70px;
     clear: both;
 }
 #footer p{
     text-align: center;
     font-size: 20px;
-    line-height: 60px;
+    line-height: 70px;
 }
