--- a/ss07_website_layout_design/exercise/exe1/create_layout_rwd.css
+++ b/ss07_website_layout_design/exercise/exe1/create_layout_rwd.css
@@ -6,16 +6,20 @@ body{
     background-color:dimgrey;
     width: 100%;
     height: 48px;
-    position: absolute;
+}
+#header #nav{
+    display: inline-block;
+    padding: 0;
+    margin: 0;
 }
 #nav li{
+    padding-top: 15px;
     position: relative;
     display: inline-block;
     color: aliceblue;
     font-size: 24px;
     padding-left: 18px;
     padding-right: 18px;
-    height: 48px;
     line-height: 48px;
     bottom: 15px;
 }
@@ -23,10 +27,17 @@ body{
     background-color: #ccc;
     color: #000;
 }
-#sidebar1{
+#header .login{
+    float:right;
+}
+#header .login button{
+    width: 100px;
+    height: 48px;
+}
+ #sidebar1{
     background-color: rgba(169, 169, 169, 0.11);
     width: 15%;
-    height: 500px;
+    height: 510px;
     float: left;
 }
 #sidebar1 ul {
@@ -38,7 +49,6 @@ body{
     padding: 10px;
 }
 #body{
-    margin-top: 50px;
     width: 70%;
     height: 500px;
     float: left;
@@ -57,9 +67,8 @@ body{
 #sidebar2{
     background-color: rgba(169, 169, 169, 0.11);
     width: 15%;
-    height: 500px;
+    height: 510px;
     float: left;
-    margin-top: 40px;
 }
 #sidebar2 button{
     width: 150px;
