--- a/ss08_bootstrap_basic/exercise/exe1/exe1.css
+++ b/ss08_bootstrap_basic/exercise/exe1/exe1.css
@@ -1,17 +1,18 @@
+/* Hiển thị 4 cột trên cùng một hàng cho màn hình lớn hơn 700px*/
 @media screen and (min-width: 700px) {
     .col-3 {
       width: 25%;
     }
   }
   
-  /* Hiển thị 2 cột trên cùng một hàng cho màn hình nhỏ hơn 992px */
+  /* Hiển thị 2 cột trên cùng một hàng cho màn hình nhỏ hơn 700px */
   @media screen and (max-width: 700px) {
     .col-3 {
       width: 50%;
     }
   }
   
-  /* Hiển thị 1 cột trên mỗi hàng cho màn hình nhỏ hơn 576px */
+  /* Hiển thị 1 cột trên mỗi hàng cho màn hình nhỏ hơn 500px */
   @media screen and (max-width: 500px) {
     .col-3 {
       width: 100%;
